# webapi/webapi/docs/swagger.json
@@ -785,15 +785,6 @@
                 "summary": "获取用户信息",
                 "parameters": [
                     {
-                        "description": "request data",
-                        "name": "auth",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/form_req.UserInfoReq"
-                        }
-                    },
-                    {
                         "type": "string",
                         "description": "authentication",
                         "name": "Authorization",
@@ -1035,10 +1026,6 @@
                 "search": {
                     "description": "根据课程名搜索",
                     "type": "string"
-                },
-                "user_id": {
-                    "description": "教师工号/学生学号",
-                    "type": "string"
                 }
             }
         },
@@ -1056,10 +1043,6 @@
                 "grade": {
                     "description": "年级",
                     "type": "integer"
-                },
-                "user_id": {
-                    "description": "教师工号",
-                    "type": "string"
                 }
             }
         },
@@ -1094,14 +1077,6 @@
                     "description": "课程id",
                     "type": "integer"
                 },
-                "file_name": {
-                    "description": "文件名",
-                    "type": "string"
-                },
-                "title": {
-                    "description": "学习标题",
-                    "type": "string"
-                },
                 "user_id": {
                     "description": "教师工号",
                     "type": "string"
@@ -1111,25 +1086,17 @@
         "form_req.CreateRegisterReq": {
             "type": "object",
             "properties": {
-                "course_id": {
-                    "description": "课程号",
+                "content_id": {
+                    "description": "学习内容id",
                     "type": "integer"
                 },
                 "create_tm": {
                     "description": "创建时间",
                     "type": "string"
                 },
-                "learning_content_id": {
-                    "description": "学习内容id",
-                    "type": "integer"
-                },
                 "register_tm": {
                     "description": "签到时间限制，默认为2分钟",
                     "type": "integer"
-                },
-                "user_id": {
-                    "description": "教师工号",
-                    "type": "string"
                 }
             }
         },
@@ -1199,10 +1166,6 @@
                 "course_id": {
                     "description": "课程id",
                     "type": "integer"
-                },
-                "user_id": {
-                    "description": "教师工号",
-                    "type": "string"
                 }
             }
         },
@@ -1212,10 +1175,6 @@
                 "course_id": {
                     "description": "课程id",
                     "type": "integer"
-                },
-                "user_id": {
-                    "description": "学生学号",
-                    "type": "string"
                 }
             }
         },
@@ -1276,20 +1235,16 @@
         "form_req.LearningReq": {
             "type": "object",
             "properties": {
-                "course_id": {
-                    "description": "课程id",
-                    "type": "integer"
-                },
-                "file_path": {
-                    "description": "文件路径",
-                    "type": "string"
-                },
-                "learning_content_id": {
+                "content_id": {
                     "description": "学习内容id",
                     "type": "integer"
                 },
+                "file_name": {
+                    "description": "文件名",
+                    "type": "string"
+                },
                 "user_id": {
-                    "description": "教师工号/学生学号",
+                    "description": "学生学号",
                     "type": "string"
                 }
             }
@@ -1297,20 +1252,12 @@
         "form_req.LearningResultReq": {
             "type": "object",
             "properties": {
-                "course_id": {
-                    "description": "课程id",
-                    "type": "integer"
-                },
-                "learning_content_id": {
+                "content_id": {
                     "description": "学习内容id",
                     "type": "integer"
                 },
                 "status": {
                     "description": "学习状态 learned-已学习/unlearned-未学习",
-                    "type": "string"
-                },
-                "user_id": {
-                    "description": "教师工号",
                     "type": "string"
                 }
             }
@@ -1335,38 +1282,22 @@
         "form_req.RegisterReq": {
             "type": "object",
             "properties": {
-                "course_id": {
-                    "description": "课程号",
-                    "type": "integer"
-                },
-                "learning_content_id": {
+                "content_id": {
                     "description": "学习内容id",
                     "type": "integer"
-                },
-                "user_id": {
-                    "description": "学生学号",
-                    "type": "string"
                 }
             }
         },
         "form_req.RegisterResultReq": {
             "type": "object",
             "properties": {
-                "course_id": {
-                    "description": "课程号",
-                    "type": "integer"
-                },
-                "learning_content_id": {
+                "content_id": {
                     "description": "学习内容id",
                     "type": "integer"
                 },
                 "register_result": {
                     "description": "签到结果，unfinished-未签到/finished-已签到",
                     "type": "integer"
-                },
-                "user_id": {
-                    "description": "教师工号",
-                    "type": "string"
                 }
             }
         },
@@ -1430,19 +1361,6 @@
                 "grade": {
                     "description": "年级",
                     "type": "integer"
-                },
-                "user_id": {
-                    "description": "教师工号",
-                    "type": "string"
-                }
-            }
-        },
-        "form_req.UserInfoReq": {
-            "type": "object",
-            "properties": {
-                "user_id": {
-                    "description": "学生学号/教师工号",
-                    "type": "string"
                 }
             }
         },
@@ -1574,6 +1492,10 @@
                 "content": {
                     "description": "学习内容",
                     "type": "string"
+                },
+                "content_id": {
+                    "description": "学习内容id",
+                    "type": "integer"
                 },
                 "file_path": {
                     "description": "文件路径",
